k8s/sample-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-api
  labels:
    app: service
spec:
  ports:
    - port: 5678
  selector:
    app: service
    tier: sample-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-api
  labels:
    app: service
spec:
  selector:
    matchLabels:
      app: service
      tier: sample-api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: service
        tier: sample-api
    spec:
      containers:
      - image: cloudeyes/sample-service:latest
        imagePullPolicy: "Always"
        name: sample-api
        ports:
        - containerPort: 5678
          name: sample-api
